[gd_scene load_steps=5 format=2]

[ext_resource path="res://levels/traps/fallingspikes/fallingspikes.png" type="Texture" id=1]
[ext_resource path="res://levels/traps/fallingspikes/fallingspikes.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 21, 18 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 42.1875, 531 )

[node name="FallingSpikes" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.28, 1 )
texture = ExtResource( 1 )

[node name="DeathArea" type="Area2D" parent="Sprite"]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/DeathArea"]
shape = SubResource( 1 )

[node name="DetectArea" type="Area2D" parent="Sprite"]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/DetectArea"]
visible = false
position = Vector2( 0, 549 )
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
rect = Rect2( -10, -250, 20, 300 )

[connection signal="body_entered" from="Sprite/DeathArea" to="." method="_on_DeathArea_body_entered"]
[connection signal="body_entered" from="Sprite/DetectArea" to="." method="_on_DetectArea_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
